<resources>
    <string name="app_name">Car Companion</string>
    <string name="currentCarPicStr">PictureOfCurrentCar</string>
    <string name="defaultCarPicStr">PictureOfDefaultCar</string>
    <string name="UpcomingCarMaintStr">Your car is nearing</string>
    <string name="RecentGasStr">Did you refuel recently\?</string>
    <string name="CarMaintHighTitleStr">Car Maintenance</string>
    <string name="RefuelGalStr">Number of\nGallons</string>
    <string name="RefuelGasGalHintStr">12.000</string>
    <string name="RefuelGalPriceStr">Price per\nGallon</string>
    <string name="RefuelGasPriceHintStr">\$3.00</string>
    <string name="AddGasBtnStr">Add Gas</string>
    <string name="ViewMaintBtnStr">View All Maintenance Needed</string>
    <string name="GasAddedMsgStr">You successfully updated gas.</string>

    <string name="CarCompanionTitleStr">Car Companion</string>
    <string name="ViewCarBtnStr">View Car</string>
    <string name="AddCarBtnStr">Add Car</string>

    <string name="AddACarTitleStr">Add a Car</string>
    <string name="CarMakeStr">Make</string>
    <string name="CarModelStr">Model</string>
    <string name="CarYearStr">Year</string>
    <string name="CarYearHintStr">2018</string>
    <string name="CarCurrentMileageStr">Mileage</string>
    <string name="CarCurrentMileageHintStr">50000</string>
    <string name="PullTotalMiles">Pull Mileage</string>
    <string name="LastOilChangeStr">Last Oil Change</string>
    <string name="LastOilChangeHintStr">05/20/2018</string>
    <string name="UploadPhotoStr">Upload Photo</string>
    <string name="uploadCarPicStr">UploadPhotoOfCar</string>
    <string name="CarEstMileagePerYearStr">Estimated Mileage/Year</string>
    <string name="CarEstMileagePerYearHintStr">20000</string>
    <!-- The 2 strings below to be concatenated with make and model -->
    <string name="Your">Your</string>
    <string name="ready">is ready for:</string>
    <!-- Use a place holder for now... -->
    <string name="Placeholder">PLACEHOLDER</string>
    <string name="OilChange">Oil Change</string>
    <string name="TireRot">Tire Rotation</string>
    <string name="Search">Search for:</string>
    <string name="PartStores">Auto Parts Stores</string>
    <string name="Dealers">Dealerships</string>
    <string name="TrackStats">Track Statistics</string>
    <string name="ExportReport">Export Maintenance Report</string>

    <!-- strings for Stats Activity -->
    <string name="StatsHeading">Track Car Statistics</string>
    <string name="MileageStats">Mileage Statistics</string>
    <string name="FuelStats">Fuel Usage Statistics</string>
    <string name="SpeedStats">Speed Statistics</string>

    <string name="DeleteCar">DELETE</string>
    <string name="deleteAll">Delete All Cars</string>
    <string name="EmailAddress">Enter Email Address</string>
    <string name="Password">Enter Password</string>
    <string name="SignIn">Sign In</string>
    <string name="Signup">Sign Up</string>

    <string name="nearbyAutoPartsStores">Loading nearby auto parts stores...</string>
    <string name="nearbyDealerships">Loading nearby dealerships...</string>

    <string name="no_connection">No Valid Bluetooth Connection</string>
    <string name="no_data">No Data</string>
</resources>