<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarMaintHighLevel">

    <TextView
        android:id="@+id/txtViewScreenTitle"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:text="@string/CarMaintHighTitleStr"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewUpcomingCarMaint"
        android:layout_width="218dp"
        android:layout_height="54dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/UpcomingCarMaintStr"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CurrentCarPic" />

    <TextView
        android:id="@+id/txtViewRecentGas"
        android:layout_width="218dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/RecentGasStr"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarMaintSoon" />

    <TextView
        android:id="@+id/txtViewGalsInput"
        android:layout_width="104dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/RefuelGalStr"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewRecentGas" />

    <EditText
        android:id="@+id/editTxtRefuelGals"
        android:labelFor="@+id/txtViewGalsInput"
        android:hint="@string/RefuelGasGalHintStr"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/btnAddGas"
        app:layout_constraintStart_toEndOf="@+id/txtViewGalsInput"
        app:layout_constraintTop_toBottomOf="@+id/txtViewRecentGas" />

    <TextView
        android:id="@+id/txtViewFuelPrice"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/RefuelGalPriceStr"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewGalsInput" />

    <EditText
        android:id="@+id/editTxtRefuelGalsPrice"
        android:labelFor="@+id/txtViewFuelPrice"
        android:hint="@string/RefuelGasPriceHintStr"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/btnAddGas"
        app:layout_constraintStart_toEndOf="@+id/txtViewFuelPrice"
        app:layout_constraintTop_toBottomOf="@+id/editTxtRefuelGals" />


    <ImageView
        android:id="@+id/CurrentCarPic"
        android:layout_width="165dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/currentCarPicStr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewScreenTitle"
        app:srcCompat="@mipmap/hyundai_elantra_foreground" />

    <ProgressBar
        android:id="@+id/progressBarMaintSoon"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="166dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewUpcomingCarMaint" />

    <Button
        android:id="@+id/btnAddGas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/AddGasBtnStr"
        app:layout_constraintBottom_toTopOf="@+id/btnViewAllMaint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewRecentGas"
        app:layout_constraintVertical_bias="0.689" />

    <Button
        android:id="@+id/btnViewAllMaint"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ViewMaintBtnStr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtRefuelGalsPrice" />

</android.support.constraint.ConstraintLayout>